# soccial_token

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.env/: devnet.env  localnet.env  mainnet.env  testnet.env
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/aead/: index.html  struct.OsRng.html  trait.AeadCore.html  trait.KeyInit.html
docs/aes/: struct.Aes128.html  struct.Aes128Dec.html  struct.Aes128Enc.html  struct.Aes192.html  struct.Aes192Dec.html  struct.Aes192Enc.html  struct.Aes256.html  struct.Aes256Dec.html  struct.Aes256Enc.html
docs/aes_gcm_siv/: all.html  constant.A_MAX.html  constant.C_MAX.html  constant.P_MAX.html  index.html  struct.AesGcmSiv.html  struct.Error.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.KeyInit.html  trait.KeySizeUser.html  type.Aes128GcmSiv.html  type.Aes256GcmSiv.html  type.Key.html  type.Nonce.html  type.Tag.html
docs/anchor_attribute_access_control/: all.html  attr.access_control.html  index.html
docs/anchor_attribute_account/: all.html  attr.account.html  attr.zero_copy.html  derive.ZeroCopyAccessor.html  index.html  macro.declare_id.html  macro.pubkey.html
docs/anchor_attribute_constant/: all.html  attr.constant.html  index.html
docs/anchor_attribute_error/: all.html  attr.error_code.html  index.html  macro.error.html
docs/anchor_attribute_event/: all.html  attr.event.html  index.html  macro.emit.html
docs/anchor_attribute_program/: all.html  attr.instruction.html  attr.program.html  index.html  macro.declare_program.html
docs/anchor_derive_accounts/: all.html  derive.Accounts.html  index.html
docs/anchor_derive_serde/: all.html  derive.AnchorDeserialize.html  derive.AnchorSerialize.html  index.html
docs/anchor_derive_space/: all.html  derive.InitSpace.html  index.html
docs/anchor_lang/: all.html  attr.access_control.html  attr.account.html  attr.constant.html  attr.error_code.html  attr.event.html  attr.instruction.html  attr.program.html  attr.zero_copy.html  derive.Accounts.html  derive.AnchorDeserialize.html  derive.AnchorSerialize.html  derive.InitSpace.html  index.html  macro.declare_id.html  macro.declare_program.html  macro.emit.html  macro.err.html  macro.error.html  macro.pubkey.html  macro.require.html  macro.require_eq.html  macro.require_gt.html  macro.require_gte.html  macro.require_keys_eq.html  macro.require_keys_neq.html  macro.require_neq.html  macro.source.html  struct.ProgramData.html  trait.AccountDeserialize.html  trait.AccountSerialize.html  trait.Accounts.html  trait.AccountsClose.html  trait.AccountsExit.html  trait.AnchorDeserialize.html  trait.AnchorSerialize.html  trait.Bump.html  trait.Bumps.html  trait.CheckId.html  trait.CheckOwner.html  (+15 more)
docs/anchor_lang_idl/: all.html  index.html
docs/anchor_lang_idl_spec/: all.html  constant.IDL_SPEC.html  enum.IdlArrayLen.html  enum.IdlDefinedFields.html  enum.IdlGenericArg.html  enum.IdlInstructionAccountItem.html  enum.IdlRepr.html  enum.IdlSeed.html  enum.IdlSerialization.html  enum.IdlType.html  enum.IdlTypeDefGeneric.html  enum.IdlTypeDefTy.html  index.html  struct.Idl.html  struct.IdlAccount.html  struct.IdlConst.html  struct.IdlDependency.html  struct.IdlDeployments.html  struct.IdlEnumVariant.html  struct.IdlErrorCode.html  struct.IdlEvent.html  struct.IdlField.html  (+11 more)
programs/soccial_token/: Cargo.toml
programs/soccial_token/src/: lib.rs
programs/soccial_token/src/airdrop/: airdrop.rs  context.rs  error.rs  mod.rs
programs/soccial_token/src/auth/: context.rs  error.rs  mod.rs  permissions.rs  user.rs
programs/soccial_token/src/economics/: error.rs  mod.rs  state.rs
programs/soccial_token/src/governance/: approval.rs  context.rs  error.rs  mod.rs  proposal.rs  proposal_type.rs  state.rs  voting.rs
programs/soccial_token/src/initialize/: context.rs  error.rs  initialize.rs  mod.rs
programs/soccial_token/src/market/: context.rs  error.rs  market.rs  mod.rs
programs/soccial_token/src/staking/: claim.rs  context.rs  error.rs  manage.rs  mod.rs  staking.rs  state.rs
programs/soccial_token/src/token/: context.rs  error.rs  metadata.rs  mod.rs  state.rs
programs/soccial_token/src/utils/: error.rs  macros.rs  math.rs  mod.rs  system.rs
programs/soccial_token/src/vaults/: context.rs  error.rs  mod.rs  vaults.rs
programs/soccial_token/src/vesting/: context.rs  error.rs  mod.rs  release.rs  schedule.rs  state.rs
programs/soccial_token/tests/: test_airdrop.rs  test_balance.rs  test_governance_proposal_create.rs  test_governance_proposal_finalize.rs  test_governance_update_settings.rs  test_governance_vote.rs  test_initialize.rs  test_initialize_economy.rs  test_initialize_spl_token.rs  test_list_contexts.rs  test_market_buy.rs  test_market_deposit.rs  test_market_transfer.rs  test_permissions.rs  test_permissions_api_authority.rs  test_staking_add.rs  test_staking_buy.rs  test_staking_plan_add.rs  test_staking_plan_deactivate.rs  test_staking_plan_edit.rs  test_staking_rewards_claim.rs  test_staking_stake.rs  test_staking_stake_withdraw.rs  test_system_emit_log.rs  test_token_api_authority_set.rs  test_token_pause.rs  test_token_resume.rs  test_token_update_airdrop_fee.rs  test_token_update_rewards_fee.rs  test_user_admin_add.rs  test_user_admin_remove.rs  test_user_early_adopter_add.rs  test_user_flag_add.rs  test_user_flag_remove.rs  test_user_permissions_assign.rs  test_user_permissions_unsign.rs  test_vault_airdrop_deposit.rs  test_vault_airdrop_transfer.rs  test_vault_airdrop_withdraw.rs  test_vault_insurance_deposit.rs  (+31 more)
programs/soccial_token/tests/testutils/: basics.rs  environment.rs  macros.rs  mod.rs
programs/soccial_token/tests/trymethods/: mod.rs  tryairdrop.rs  trygovernance.rs  trymarket.rs  trystaking.rs  trysystem.rs  trytoken.rs  tryuser.rs  tryvaults.rs  tryvesting.rs
scripts/: configure_tests.sh  deploy.sh  deploy_test.sh  generate_tests_toml.sh  test.sh  test_list.sh  test_select.sh  test_ts.sh  test_ts_list.sh  test_ts_select.sh  update.sh
tests_ts/: test_balance.ts  test_initialize.ts  test_state.ts  test_vars.ts
(+5706 files in other folders)
